# applyllm

./: .gitignore  BuildPackage.md  LICENSE  LLM.md  Makefile  QuickStart.md  README.md  pyproject.toml
applyllm/: __init__.py  objectstore_utils.py  pdf_text_loader.py  test.py
applyllm/accelerators/: __init__.py  accelerator_utils.py
applyllm/io/: __init__.py  objectstore_utils.py  pdf_text_loader.py  sqldbs_utils.py
applyllm/pipelines/: __init__.py  builder.py  components.py  config.py
applyllm/utils/: __init__.py  common.py  nlp.py
envtools/: README_mac.md
llm-examples/: boto3_pdfloader.ipynb  extract_entity_from_s3_source.ipynb  extract_entity_from_s3_source_before_refactor.ipynb  extract_gender_from_s3_source_v1.ipynb  extract_weight_from_s3_source_v1.ipynb  langchain_huggingface_llm_example.ipynb  med_reports_contains_table.ipynb  preprocess_data.ipynb  quantized_llm_playground.ipynb  requirements.txt  requirements_cuda.txt  requirements_old.txt  scp_get_folder.ipynb  translator_english.ipynb  translator_german.ipynb  translator_german_from_s3_sources.ipynb  translator_german_from_s3_sources_old.ipynb  z_load_hg_data.ipynb  z_local_ft.ipynb  z_local_llm.ipynb
llm-examples/benchmarks/: human_eval.py  human_eval_solution.py
llm-examples/deprecated/: extract_entity_from_s3_source_old.ipynb  llama2-old.ipynb  quantized_llm_playground_uncleaned_doc1.ipynb  z_local_llm_old.ipynb
llm-examples/pipelines/: info-extraction-pipeline-kfp1_v0.ipynb  llm_rag_age_kfp_pipeline_v3.ipynb  llm_rag_gender_kfp_pipeline_v1.ipynb  llm_rag_kfp_pipeline_v1.ipynb  llm_rag_kfp_pipeline_v2.ipynb  llm_rag_weight_kfp_pipeline_v1.ipynb  pdf-de-en-translation-pipeline-kfp1_v0.ipynb  pdf_tabula_check_kfp_pipeline_v1.ipynb  pipeline_custom_package.ipynb
llm-examples/setup/: download_img_gen.py  download_llms.py  download_translator.py  mlflow-poddefault-template.yaml  requirements310mac.txt  requirements_arm64_mac_312.txt
llm-examples/tests/: global_attr.py  left_outer_join.py  postgres-connection-tests-sqlalchemy.ipynb  postgres-connection-tests.ipynb  reg.py  test_table_text_extraction.ipynb  test_table_text_extraction_camelot.ipynb
