[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applyllm"
version = "0.0.9.rc2"
authors = [
    { name="Yingding Wang", email="yingdingwang@yahoo.de" },
]
description = "A python package to apply opensource LLM in local CUDA environment"
readme = "QuickStart.md"
requires-python = ">=3.12"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

dependencies = [
    'langchain >= 1.2.0',
    'transformers >= 5.0.0rc1',
    'torch >= 2.9.1',
    'pydantic >= 2.12.5',
    'boto3 >= 1.42.9',
    'mlflow >= 3.7.0',
    'bitsandbytes >= 0.49.0',
    'pypdf >= 6.4.2',
    'accelerate >= 1.12.0',
    'psycopg[binary] >= 3.1.16',
    'SQLAlchemy >= 2.0.24',
    'unstructured >= 0.18.21',
    'sentence-transformers >= 5.2.0',
    'docarray >= 0.41.0',
]

[project.urls]
Homepage = "https://github.com/yingding/applyllm"
Issues = "https://github.com/yingding/applyllm/issues"

[tool.setuptools.packages]
find = {}